# spotivis

./: .gitignore  pyproject.toml
spotivis/: data_retrieval.py  spotify_auth.py
