[tool.poetry]
name = "spotivis"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
